[feat]: add interaction list, change db schema